--- a/management/templates/male/fashion_male.html
+++ b/management/templates/male/fashion_male.html
@@ -423,15 +423,11 @@
     </header>
     <div class="none"></div>
     <nav class="post">
-        <span>EXPLORE OUR KEY ICONS - <a href="">KHÁM PHÁ ORIGINALS</a></span>
+        <span style="text-transform: uppercase;">Sự tự tin bắt đầu từ trang phục</span>
         <i class="fa-solid fa-xmark"></i>
     </nav>
 
     <nav>
-        <h1>QUẦN ÁO NAM </h1>
-        <p style="width: 60%; font-size: 20px;">Kém sang! Kém đẹp! Kém bắt mắt sẽ tan thành mây khói khi khoác lên bộ đồ này lên người. Tự tin xuống phố cả ngày, thu hút mọi ánh nhìn các cô gái nhé chàng trai!
-
-        </p>
         <div class="Menubar">
             <ul>
                 
@@ -550,7 +546,7 @@
                 <h1>TRỞ THÀNH HỘI VIÊN & HƯỞNG ƯU ĐÃI 15%</h1>
                 <div class="button">
                     <div class="_main_button">
-                        <a href="">ĐĂNG KÝ MIỄN PHÍ <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="/signup">ĐĂNG KÝ MIỄN PHÍ <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
