--- a/management/templates/male/male_page.html
+++ b/management/templates/male/male_page.html
@@ -430,7 +430,7 @@
     <header>
         <div class="Menu">
             <ul>
-                <li style="font-weight: bold;">Home</li>
+                <li><a href="/home"><i class="fa-solid fa-angle-left"></i> HOME</a></li>
                 <li><a href="/shoemale_page" >GIÀY</a></li>
                 <li><a href="/fashion_male" >QUẦN ÁO</a></li>
                 <li><a href="" >PHỤ KIỆN</a></li>
