--- a/management/templates/info/info.html
+++ b/management/templates/info/info.html
@@ -751,7 +751,7 @@
             </div>
             <div>
                 <span>
-                    <i class="fa-solid fa-truck-fast"></i> <a href=""> FREE SHIPPING FOR ADICLUB MEMBERS</a>
+                    <i class="fa-solid fa-truck-fast"></i> <a href=""> FREE SHIPPING FOR 2HMCLUB MEMBERS</a>
                 </span>
                 <span>
                     <i class="fa-solid fa-right-left"></i> <a href=""></i> HOÀN TRẢ DỄ DÀNG</a>
