--- a/management/templates/male/male_page.html
+++ b/management/templates/male/male_page.html
@@ -624,7 +624,7 @@
         function text_animation() {
             let list = [
                 "HÀNG VIỆT NAM CHẤT LƯỢNG CAO ",
-                "ADDIAS - ĐỒNG HÀNH TRÊN CON ĐƯỜNG CHINH PHỤC",
+                "2HM - ĐỒNG HÀNH TRÊN CON ĐƯỜNG CHINH PHỤC",
                 "GIAO HÀNG MIỄN PHÍ CHO CÁC THÀNH VIÊN 2HMCLUB"
             ];
             var i = 0;
